--- a/templates/users/physician/physician_deleted_list.html
+++ b/templates/users/physician/physician_deleted_list.html
@@ -2,7 +2,8 @@
 
 {% block page_content %}
     <h1 class="text-center">All Deleted Physicians List</h1>
-    <div class="row">
+    <p></p>
+    <div class="text-center">
         <div class="col-lg-3"></div>
         {% if all_physicians %}
             <div class="table-responsive-md">
