--- a/templates/users/physician/physician_nondeleted_list.html
+++ b/templates/users/physician/physician_nondeleted_list.html
@@ -7,7 +7,7 @@
         <a href="{% url 'create physician user' %}" class="btn btn-primary" role="button">Register New Physician </a>
     </div>
     <p></p>
-    <div class="row">
+    <div  class="text-center">
         <div class="col-lg-3"></div>
                 {% if all_physicians %}
         <div class="table-responsive-md">
