--- a/templates/laboratory/department/department_restore.html
+++ b/templates/laboratory/department/department_restore.html
@@ -1,16 +1,16 @@
 {% extends 'main/base.html' %}
 
 {% block page_content %}
-    <h1 class="text-center">Restore Analysis Field Form</h1>
+    <h1 class="text-center">Restore Department Form</h1>
+    <p></p>
     <div class="row">
         <div class="col-lg-6">
             <form method="post" action="{% url 'restore department' department.pk %}">
                 {% csrf_token %}
                 {{ form }}
-
+                <p></p>
                 <button class="btn btn-success mt-2" type="submit">Restore</button>
             </form>
         </div>
-        <div class="col-lg-3"></div>
     </div>
 {% endblock %}
