--- a/templates/laboratory/department/department_nondeleted_list.html
+++ b/templates/laboratory/department/department_nondeleted_list.html
@@ -2,8 +2,8 @@
 
 {% block page_content %}
     <h1 class="text-center">Departments List</h1>
-    <p></p>
-    <div class="d-flex justify-content-center">
+    <br>
+    <div class="row justify-content-md-center">
         <a href="{% url 'department register' %}" class="btn btn-primary" role="button">Create New Department</a>
     </div>
     <p></p>
