--- a/templates/laboratory/all_patients_referred_by_specific_physician_list.html
+++ b/templates/laboratory/all_patients_referred_by_specific_physician_list.html
@@ -1,9 +1,11 @@
 {% extends 'main/base.html' %}
 
 {% block page_content %}
+    {#    <h1 class="text-center">All Patients Referred by Required Physician</h1>#}
     <h1 class="text-center">All Patients Referred by Physician {{ physician.full_name }}</h1>
-    <div class="row">
-        {% if patients %}
+    <br>
+    <div class="row justify-content-md-center">
+        {% if object_list %}
             <div class="table-responsive-md">
             <table class="table table-bordered">
                 <tr class="first-table-row">
@@ -16,7 +18,7 @@
                     <th scope="col">Check results</th>
 
                 </tr>
-                {% for patient in patients %}
+                {% for patient in object_list %}
                     <tr>
                         <td>{{ patient.pid }}</td>
                         <td>{{ patient.pid_type }}</td>
@@ -24,35 +26,61 @@
                         <td>{{ patient.sex }}</td>
                         <td>{{ patient.date_of_birth }}</td>
                         <td>{{ patient.created_on }}</td>
-                        <td><a href="{% url 'show details patient' patient.pk %}"> Link </a></td>
+                        <td><a href="{% url 'show details patient' patient.pk %}"> View Results </a></td>
                     </tr>
                 {% endfor %}
             </table>
+            {#            Start Pagination#}
+            <br>
             {% if is_paginated %}
-                <ul class="pagination">
-                    {% if page_obj.has_previous %}
-                        <li><a href="?page={{ page_obj.previous_page_number }}">&laquo;</a></li>
-                    {% else %}
-                        <li class="disabled"><span>&laquo;</span></li>
-                    {% endif %}
-                    {% for i in paginator.page_range %}
-                        {% if page_obj.number == i %}
-                            <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
+                <nav aria-label="Page navigation">
+                    <ul class="pagination justify-content-center">
+                        {% if page_obj.has_previous %}
+                            <li class="page-item">
+                                <a class="page-link" href="?page={{ page_obj.previous_page_number }}"
+                                   aria-label="Previous">
+                                    <span aria-hidden="true">&laquo;</span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                            </li>
                         {% else %}
-                            <li><a href="?page={{ i }}">{{ i }}</a></li>
+                            <li class="page-item disabled">
+                                <a class="page-link" aria-label="Previous">
+                                    <span aria-hidden="true">&laquo;</span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                            </li>
                         {% endif %}
-                    {% endfor %}
-                    {% if page_obj.has_next %}
-                        <li><a href="?page={{ page_obj.next_page_number }}">&raquo;</a></li>
-                    {% else %}
-                        <li class="disabled"><span>&raquo;</span></li>
-                    {% endif %}
-                </ul>
+                        {% for i in paginator.page_range %}
+                            {% if page_obj.number == i %}
+                                <li class="page-item"><a class="page-link">{{ i }}</a></li>
+                            {% else %}
+                                <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+                            {% endif %}
+                        {% endfor %}
+                        {% if page_obj.has_next %}
+                            <li class="page-item">
+                                <a class="page-link" href="?page={{ page_obj.next_page_number }}"
+                                   aria-label="Next">
+                                    <span aria-hidden="true">&raquo;</span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </li>
+                        {% else %}
+                            <li class="page-item disabled">
+                                <a class="page-link" aria-label="Next">
+                                    <span aria-hidden="true">&raquo;</span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </li>
+                        {% endif %}
+                    </ul>
+                </nav>
             {% endif %}
+            {#            End of Pagination#}
         {% else %}
             No Patients to display!
         {% endif %}
         </div>
-        <div class="col-lg-3"></div>
     </div>
 {% endblock %}
