--- a/templates/laboratory/department/department_create.html
+++ b/templates/laboratory/department/department_create.html
@@ -1,15 +1,15 @@
 {% extends 'main/base.html' %}
 {% block page_content %}
     <h1 class="text-center">Create New Department Form</h1>
-    <div class="row">
-        <div class="col-lg-6">
-            <form method="post" action="{% url 'department register' %}">
-                {% csrf_token %}
-                {{ form.as_p }}
+    <br>
+    <div class="row justify-content-md-center">
+        <form method="post" action="{% url 'department register' %}">
+            {% csrf_token %}
+            {{ form.as_p }}
 
-                <button class="btn btn-primary mt-2" type="submit">Create Department</button>
-            </form>
-        </div>
-        <div class="col-lg-3"></div>
+            <button class="btn btn-primary mt-2" type="submit">Create</button>
+        </form>
     </div>
+    <div class="col-lg-3"></div>
+
 {% endblock %}
