--- a/templates/laboratory/result/patient_specific_result_list.html
+++ b/templates/laboratory/result/patient_specific_result_list.html
@@ -2,8 +2,8 @@
 
 {% block page_content %}
     <h1 class="text-center">Patient's Results List</h1>
-    <div class="row">
-        <div class="col-lg-3"></div>
+        <br>
+    <div class="d-flex justify-content-center">
         <p>
             Patient: {{ patient.full_name }}
         </p>
