--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -56,9 +56,7 @@
                         {% endif %}
                         {% if user.is_patient %}
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="{% url 'all patient specific results' user.pk %}">Check
-                                Your
-                                Results</a>
+                            <a class="dropdown-item" href="{% url 'show details patient' user.pk %}">Check Your Results</a>
                         {% endif %}
                         {% if user.is_staff %}
                             <div class="dropdown-divider"></div>
@@ -183,8 +181,10 @@
 
 <!-- Profile Information -->
 <div class="container">
+    </br>
     {% block page_content %}
     {% endblock %}
+    </br>
 </div>
 
 {#{% block bottom_page_content %}#}
