--- a/templates/users/patient/patients_nondeleted_list.html
+++ b/templates/users/patient/patients_nondeleted_list.html
@@ -3,8 +3,8 @@
 {% block page_content %}
     <h1 class="text-center">All Patients List</h1>
     <p></p>
-    <div class="row">
-        <div class="col-lg-3"></div>
+
+    <div class="d-flex justify-content-center">
         <form action="{% url 'search patient' %}" class="form-inline my-2" method="get">
             <div class="form-group mx-sm-3 mb-2">
                 <label for="" class="sr-only">Search</label>
@@ -12,9 +12,9 @@
                        aria-label="Search">
                 <button type="submit" class="btn btn-outline-success my-2 my-sm-2">Search</button>
             </div>
-
         </form>
     </div>
+
     <p></p>
     <p></p>
     <div class="d-flex justify-content-center">
@@ -23,8 +23,7 @@
     <p></p>
 
     <br/>
-    <div class="row">
-        <div class="col-lg-3"></div>
+    <div class="row justify-content-md-center">
         {% if all_patients %}
             <div class="table-responsive-md">
             <table class="table table-bordered">
@@ -93,6 +92,5 @@
             No Patients
         {% endif %}
         </div>
-        <div class="col-lg-3"></div>
     </div>
 {% endblock %}
